--- a/es06.html
+++ b/es06.html
@@ -7,5 +7,13 @@
 </head>
 <body>
     <h1>ES06</h1>
+  
     <script src="js/function.js"></script>
+    <script src="js/templateStrinng.js"></script>
+    <script src="js/arrowFunction.js"></script>
+    <script src="js/spread.js"></script>
+    <script src="js/destructure.js"></script>
+    <script src="js/object.js"></script>
+    <script src="js/objectarray.js"></script>
+    </body>
 </html>
